--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ a {
   padding-top: 32px;
   padding-bottom: 32px;
 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   color: var(--txt-nav-n-headings);
 
   font-weight: 500;
@@ -119,6 +121,23 @@ a {
   margin-right: 0;
 }
 
+.current-page {
+  position: relative;
+}
+
+.current-page::after {
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+
+  content: "";
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+  background-color: var(--bgc-button);
+}
+
 /* Header - Address Side */
 
 .nav-address {
@@ -133,6 +152,9 @@ a {
 
 .nav-address-active {
   display: flex;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   color: var(--txt-paragraphs);
 
   font-weight: 500;
@@ -207,6 +229,8 @@ a {
   border: transparent;
   padding: 10px 32px;
 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   background-color: var(--bgc-button);
   color: var(--txt-main-inactive-foot-address);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -217,8 +241,8 @@ a {
   letter-spacing: 0.06em;
 }
 
-.main-activity-button:focus,
-.main-activity-button:hover {
+.main-activity-button:hover,
+.main-activity-button:focus {
   border: 1px solid #ffffff;
 }
 
@@ -410,6 +434,9 @@ a {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   background-color: var(--bgc-primary);
 }
 
@@ -458,6 +485,8 @@ a {
   border-radius: 4px;
   width: 170px;
   height: 90px;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-customers-link:hover,
@@ -524,6 +553,7 @@ a {
 
 .footer-address a {
   color: var(--txt-footer-phone-n-mail);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address a:hover,
@@ -553,6 +583,8 @@ a {
 }
 
 .footer-center .socials-link {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   background: rgba(255, 255, 255, 0.1);
 }
 
@@ -598,6 +630,8 @@ a {
   border: none;
   outline-color: transparent;
 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   background-color: var(--bgc-our-team);
   color: var(--txt-nav-n-headings);
   font-weight: 500;
@@ -630,6 +664,8 @@ a {
 .projects-list-item {
   flex-basis: calc((100% - 60px) / 3);
   list-style-type: none;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-list-item:not(:nth-child(3n)) {
