--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ a {
 
 .current-page::after {
   position: absolute;
-  bottom: -2px;
+  bottom: -1px;
   left: 0;
 
   content: "";
@@ -355,6 +355,34 @@ a {
 
 .our-work-flex-item:not(:last-child) {
   margin-right: 30px;
+}
+
+.our-work-links {
+  display: block;
+  position: relative;
+}
+
+.our-work-links-title {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+
+  margin: 0;
+  padding: 27px 0;
+  
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--txt-main-inactive-foot-address);
+  background: rgba(47, 48, 58, 0.8);
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* Main - Our Team Section */
