--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,7 @@ a {
 
   margin: 0;
   padding: 27px 0;
-  
+
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -742,4 +742,42 @@ a {
 
   border: 1px solid #eeeeee;
   border-top: transparent;
+}
+
+/* Projects cards overlay */
+
+.projects-description-layer {
+  position: relative;
+  overflow: hidden;
+}
+
+.projects-description-layer:hover .projects-description-overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.projects-description-overlay {
+  padding: 63px 24px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  background-color: var(--bgc-button);
+
+  transform: translateY(100%);
+  opacity: 0;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-description-overlay p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
 }
